tests/neg/parser_top_level_recovery_then_decl.baa
// EXPECT: متوقع تصريح
// EXPECT: ابدأ التصريح بنوع
// EXPECT-DIAG-COUNT: 1
إرجع ٠.
صحيح الرئيسية() {
    إرجع ٠.
}
